--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 dash==2.18.2
 dash-bootstrap-components==1.6.0
-plotly==5.24.
-pandas==2.2.3
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+Flask==3.0.3
 numpy==2.2.1
-gunicorn
+pandas==2.2.3
+plotly==5.24.1
+gunicorn==21.2.0
